Fix docker app container should link to db container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - DB_NAME=app
       - DB_USER=postgres
       - DB_PASS=secretpassword
-    depends_on: 
-      - db
+    links:
+      - db:db
 
   db:
     image: postgres:10-alpine
